[TTAHUB-4220] Review and submit page for collab report (#3010)
* Initial build

* Review and submit tweaks

* Fix approver redirect check

* work in progress

* Add needs action view for approver

* Uncomment (resolve todo)

* Fix failing existing tests

* Add tests

* Simplify some code and write test coverage

* Fixes for review/submit

* Remove early return

* [TTAHUB-4003] Approver submitter logic for collab report, plus fixes for saving (#3016)

* help out createOrUpdate service

* Fix bug with policies

* Fixes for tests, add additional seeder

* Remove invalid tests

* Fixes for saving report

* Additional fixes for saving reports

* Fixes for submission

* Update tests for revised save function

* Update backend tests

* Implement save and continue

* Update approved view

* fix approval logic

* Updates give test structure

* Update src/services/collabReports.ts

--- a/frontend/src/pages/ActivityReport/index.scss
+++ b/frontend/src/pages/ActivityReport/index.scss
@@ -90,3 +90,7 @@
 .smart-hub--report-legend__no-legend-margin-top legend{
   margin-top: 0;
 }
+
+.smart-hub--report-legend--collapse-form-group .usa-form-group {
+  margin-top: 0;
+}
