--- a/frontend/src/pages/CollaborationReportForm/Pages/activitySummary.scss
+++ b/frontend/src/pages/CollaborationReportForm/Pages/activitySummary.scss
@@ -1,9 +1,13 @@
-// Fixes a margin issue with the "indicates required field" element
-form .cr-activity-summary-required p:first-of-type {
-  margin-bottom: 0;
-}
+.smart-hub-collab-report {
 
-.usa-input:not([type=number]), .usa-textarea {
-  width: 498px;
-}
+  // Fixes a margin issue with the "indicates required field" element
+  form .cr-activity-summary-required p:first-of-type {
+    margin-bottom: 0;
+  }
 
+  // Aligns text inputs
+  .usa-input:not([type=number]),
+  .usa-textarea {
+    width: 498px;
+  }
+}
