[TTAHUB-4193] Add new conditional session facilitation form (#3038)
* add new conditional session form and a UI test for it

* Update forwarding; update prop types error

* Fix forwarding, again

* add default param value to session fetcher

* Updates to session form

* Correct the forwarding logic. Fix the spacing with a heading

* [TTHAUB-4293] Updates to session form (#3042)

* Updates to session form

* Make sure not to include monitoring goal

* e2e test updates

* Rearrange some CSS

* Fix routing bug

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -195,6 +195,11 @@ body {
   color: $ttahub-medium-blue;
 }
 
+.usa-button.usa-button--no-margin,
+.usa-form .usa-button.usa-button--no-margin {
+  margin: 0;
+}
+
 input:not([disabled]):focus,
 select:not([disabled]):focus,
 textarea:not([disabled]):focus,
