--- a/frontend/src/pages/RecipientRecord/components/RecipientSummary.css
+++ b/frontend/src/pages/RecipientRecord/components/RecipientSummary.css
@@ -1,3 +1,15 @@
 .ttahub--recipient-summary p strong{
     font-size: 14px;
 }
+
+.ttahub--recipient-summary h4 {
+    font-family: 'Merriweather', serif;
+}
+
+.ttahub--recipient-summary {
+    min-height: 350px;
+    max-height: 350px;
+}
+
+
+
