--- a/frontend/src/pages/RecipientRecord/components/RecipientSpotlight.scss
+++ b/frontend/src/pages/RecipientRecord/components/RecipientSpotlight.scss
@@ -11,3 +11,7 @@
  border: 1px solid #DFE1E2;
  border-radius: 4px;
 }
+
+.ttahub-recipient-spotlight-content .smart-hub--no-results-found {
+    padding: 24px
+}
