updates per Lauren

--- a/frontend/src/pages/RecipientRecord/components/IndicatorCounter.scss
+++ b/frontend/src/pages/RecipientRecord/components/IndicatorCounter.scss
@@ -1,6 +1,10 @@
 
 @use '../../../colors.scss' as *;
 
+.ttahub--indicator-counter {
+  max-width: 400px;
+}
+
 .ttahub--indicator-box-filled {
   background-color: $ttahub-medium-blue;
 }
