Correct accessibility issues with formitem/customlabel combo, announce drawer trigger

--- a/frontend/src/components/FormItem.scss
+++ b/frontend/src/components/FormItem.scss
@@ -1,5 +1,9 @@
 @use '../colors.scss' as *;
 
+.usa-form-group.ttahub-form-item * {
+  max-width: 500px;
+}
+
 .smart-hub--form-required {
   color: $error-dark;
 }
