Fix styling bug and constain date picker widths on event summary

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -200,6 +200,11 @@ body {
   margin: 0;
 }
 
+.usa-button.usa-button--no-margin-top,
+.usa-form .usa-button.usa-button--no-margin-top {
+  margin-top: 0;
+}
+
 input:not([disabled]):focus,
 select:not([disabled]):focus,
 textarea:not([disabled]):focus,
