add spotlight cards with no results

--- a/frontend/src/pages/RegionalDashboard/components/RecipientSpotlightDashboard.scss
+++ b/frontend/src/pages/RegionalDashboard/components/RecipientSpotlightDashboard.scss
@@ -1,4 +1,13 @@
+@import '../../../colors';
 
 .smart-hub--recipient-spotlight-dashboard .smart-hub--dashboard-overview-container > div {
     min-width: 300px;
+}
+
+.recipient-spotlight-header {
+    border-bottom: 1px solid $base-lighter;
+}
+
+.ttahub-recipient-spotlight-table .smart-hub--no-results-found {
+    padding: 40px 24px 80px;
 }
