--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -153,6 +153,12 @@ body {
   font-weight: bold;
 }
 
+.usa-list--none {
+  list-style: none;
+  margin: 0;
+  padding-left: 0;
+}
+
 .flex-gap-1 {
   gap: 0.5em;
 }
