--- a/frontend/src/pages/RegionalDashboard/components/RecipientSpotlightDashboard.scss
+++ b/frontend/src/pages/RegionalDashboard/components/RecipientSpotlightDashboard.scss
@@ -1,4 +1,4 @@
-@import '../../../colors';
+@use '../../../colors.scss' as *;
 
 .smart-hub--recipient-spotlight-dashboard .smart-hub--dashboard-overview-container > div {
     min-width: 300px;
