--- a/frontend/src/pages/RegionalDashboard/components/RecipientSpotlightCard.scss
+++ b/frontend/src/pages/RegionalDashboard/components/RecipientSpotlightCard.scss
@@ -14,6 +14,13 @@
     }
   }
 
+  // Add margin between indicator counter and expander on mobile
+  &__expander-container {
+    @media (max-width: 880px) {
+      margin-top: 1rem;
+    }
+  }
+
   // Expanded indicator details
   &__details {
     border-top: 1px solid $base-lighter;
