--- a/frontend/src/pages/CollaborationReportForm/index.scss
+++ b/frontend/src/pages/CollaborationReportForm/index.scss
@@ -1,2 +1,15 @@
 @use '../../colors.scss' as *;
 
+.smart-hub-collab-report {
+
+  // Fixes a margin issue with the "indicates required field" element
+  form .cr-activity-summary-required p:first-of-type {
+    margin-bottom: 0;
+  }
+
+  // Makes inputs uniformly responsive
+  .usa-input:not([type=number]),
+  .usa-textarea {
+    max-width: 498px;
+  }
+}
