--- a/frontend/src/pages/CollaborationReportForm/index.scss
+++ b/frontend/src/pages/CollaborationReportForm/index.scss
@@ -12,4 +12,15 @@
   .usa-textarea {
     max-width: 498px;
   }
+
+  // Adding a bottom margin for mobile views to the status label and auto-save alert
+  @media (max-width: 1084px) {
+    .smart-hub-status-label {
+      margin-bottom: 16px;
+    }
+
+    .smart-hub--save-alert {
+      margin-bottom: 16px;
+    }
+  }
 }
