TTAHUB-4219 - Next Steps Section (#3051)
* Next Steps Section

* Removing no-longer-needed get values button

* Correctly saving CollabReportSteps

* Adding empty step and implementing Next Steps isPageComplete

* Improvements to CR Activity Summary ReviewSection

* Improvements to CR Supporting Info ReviewSection

* Improvements to CR Supp Info isPageComplete

* Fix to CR Service to better handle CR Goals

* Improvement to adding empty steps

* Fixes to Supp Info participants and Next Steps tests

* Adding better date validation to NS page.

* Updating data model

* Fixing it so that the correct region is being saved for CR forms

* Adding missing "activity method" to the SubmittedCollabReport component

* Removing un-needed console logs

* Fixing it so a blank conductMethod doesn't fire a 500

* Adding collab report to print stylesheet, updating a few missing placeholders

* Updating isPageComplete and related tests to better reflect singular conductMethod

* Updates to better support when no collabReportSpecialists in tests

* Fixing showing the "collected data - other" text input

* Fixing it so that there's only one edit button in the Next Steps review section

* Better handling selectedDataUsed when undefined

* Adding console log to try and narrow down loading error

* Updating a few tests to account for better network connection error handling.

* Eslint ignoring console.warn for testing purposes

* Cleaning up some faulty logic and remaining unneeded conductMethod references

* Fixing display of states involved on the act sum review panel

* Fixing conductMethod undefined test

* Removing the "disabled" state from the CR Review and Submit "submit" button

* Fixing the appearance of the "Select dropdown indicator"

* Fix for "needs action" review state

* Adding a non-breaking-space to Report ID table header to keep it from wrapping to next line sometimes.

* Fixing it so that the CR form can be filled out in a "non-linear" way

* Updating a couple Activity 

--- a/frontend/src/pages/CollaborationReportForm/index.scss
+++ b/frontend/src/pages/CollaborationReportForm/index.scss
@@ -1,2 +1,26 @@
 @use '../../colors.scss' as *;
 
+.smart-hub-collab-report {
+
+  // Fixes a margin issue with the "indicates required field" element
+  form .cr-activity-summary-required p:first-of-type {
+    margin-bottom: 0;
+  }
+
+  // Makes inputs uniformly responsive
+  .usa-input:not([type=number]),
+  .usa-textarea {
+    max-width: 498px;
+  }
+
+  // Adding a bottom margin for mobile views to the status label and auto-save alert
+  @media (max-width: 1084px) {
+    .smart-hub-status-label {
+      margin-bottom: 16px;
+    }
+
+    .smart-hub--save-alert {
+      margin-bottom: 16px;
+    }
+  }
+}
