--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -174,6 +174,10 @@ body {
   gap: 1em;
 }
 
+.flex-gap-3 {
+  gap: 1.5em; /* 24px */
+}
+
 /* ========== some form resets ========== */
 
 .usa-button:not(
