--- a/frontend/src/components/Tooltip.scss
+++ b/frontend/src/components/Tooltip.scss
@@ -30,7 +30,7 @@
   text-decoration: underline;
   text-decoration-style: dashed;
   text-decoration-thickness: 2px;
-  text-decoration-color: #71767A; /* Same color as original SVG */
+  text-decoration-color: $base-medium; /* Same color as original SVG */
   text-underline-offset: 2px; /* Space between text and underline */
 }
 
