Fix some bugs discovered

--- a/frontend/src/pages/TrainingReports/components/EventCard.scss
+++ b/frontend/src/pages/TrainingReports/components/EventCard.scss
@@ -1,9 +1,5 @@
 @use '../../../colors' as *;
 
-$min-width-title-column: 200px;
-$min-width-id-column: 107px;
-$min-width-organizer-column: 150px;
-$min-width-date-column: 115px;
 $min-width-menu-column: 20px;
 
 .ttahub-event-card {
@@ -22,6 +18,16 @@ $min-width-menu-column: 20px;
 
 .ttahub-event-card__event-column:not(:nth-last-child(2)) {
   margin-bottom: 16px;
+}
+
+.ttahub-event-card__event-column {
+  max-width: 75%;
+}
+
+.ttahub-event-card__event-column__menu {
+  position: absolute;
+  right: 0;
+  top: 0;
 }
 
 @container ttahub-event-card (min-width: 710px) {
@@ -57,32 +63,15 @@ $min-width-menu-column: 20px;
 }
 
 @container ttahub-event-card (min-width: 980px) {
+  .ttahub-event-card__row {
+    flex-wrap: nowrap;
+  }
+
   .ttahub-event-card__event-column:not(:last-child) {
     margin-bottom: 0px;
   }
 
-  // Title.
-  .ttahub-event-card__event-column__title {
-    flex-basis: clamp($min-width-title-column, 24%, 100%);
-  }
-
-  // Event ID.
-  .ttahub-event-card__event-column__id {
-    flex-basis: clamp($min-width-id-column, 12%, 100%);
-  }
-
-  // Event Organizer.
-  .ttahub-event-card__event-column__organizer {
-    flex-basis: clamp($min-width-organizer-column, 15%, 100%);
-  }
-
-  // Event Date.
-  .ttahub-event-card__event-column__date {
-    flex-basis: clamp($min-width-date-column, 12.5%, 100%);
-  }
-
-  // Event Context Menu.
   .ttahub-event-card__event-column__menu {
-    flex-basis: clamp($min-width-menu-column, 2%, 100%);
-  }
+    position: relative;
+  } 
 }
