--- a/frontend/src/components/Tooltip.scss
+++ b/frontend/src/components/Tooltip.scss
@@ -5,15 +5,6 @@
     position: relative;
 }
 
-.smart-hub-tooltip .ttahub-tooltip-underline {
-    position: absolute;
-    width: 100%;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    overflow: visible;
-}
-
 .smart-hub-tooltip .usa-button,
 .smart-hub-tooltip .usa-button:hover {
     margin-top: 0;
@@ -32,6 +23,15 @@
 
 .smart-hub--ellipsis > span {
     position: relative;
+}
+
+/* CSS-based dashed underline */
+.smart-hub-tooltip__underlined-text {
+  text-decoration: underline;
+  text-decoration-style: dashed;
+  text-decoration-thickness: 1px;
+  text-decoration-color: $base-darkest; /* Lighter grey to match original appearance */
+  text-underline-offset: 6px; /* Space between text and underline */
 }
 
 .smart-hub-tooltip {
