Remove page-break-inside in favor of break-inside

--- a/frontend/src/components/ReadOnlyContent.scss
+++ b/frontend/src/components/ReadOnlyContent.scss
@@ -62,7 +62,7 @@
   .ttahub-read-only-content-section h3 {
     padding: 0 !important;
     margin-bottom: 2rem !important;
-    page-break-inside: avoid !important;
+    break-inside: avoid !important;
   }
 }
 
