--- a/frontend/src/pages/ViewTrainingReport/index.css
+++ b/frontend/src/pages/ViewTrainingReport/index.css
@@ -22,7 +22,7 @@
         padding: 0 !important;
     }
 
-    .ttahub-read-only-content-section {
-        page-break-inside: avoid;
+    .ttahub-read-only-content-section-container > div:has(h2) {
+        margin-block-start: 1rem;
     }
 }
