--- a/frontend/src/pages/CollaborationReportForm/index.scss
+++ b/frontend/src/pages/CollaborationReportForm/index.scss
@@ -2,6 +2,11 @@
 
 .smart-hub-collab-report {
 
+  // Remove focus outline when programmatically focused (tabIndex={-1})
+  &:focus {
+    outline: none;
+  }
+
   // Fixes a margin issue with the "indicates required field" element
   form .cr-activity-summary-required p:first-of-type {
     margin-bottom: 0;
