--- a/frontend/src/widgets/ApprovalRateByDeadlineWidget.css
+++ b/frontend/src/widgets/ApprovalRateByDeadlineWidget.css
@@ -83,6 +83,10 @@
   white-space: nowrap;
 }
 
+.approval-rate-by-deadline-widget .smarthub-horizontal-table-widget .usa-table tbody tr:first-child td {
+  border-top: 0;
+}
+
 .approval-rate-by-deadline-widget--single .smarthub-horizontal-table-widget .usa-table {
   table-layout: fixed;
 }
@@ -145,6 +149,11 @@
 }
 
 @media (min-width: 60em) {
+  .approval-rate-by-deadline-widget .smarthub-horizontal-table-widget
+  .usa-table thead th.smarthub-horizontal-table-first-column.smarthub-horizontal-table--sticky-first-column {
+    border-bottom: 1px solid lightgray;
+  }
+
   .approval-rate-by-deadline-widget--single .smarthub-horizontal-table-widget
   .smarthub-horizontal-table-first-column-border::after {
     border-right: 0;
