--- a/frontend/src/components/Tooltip.scss
+++ b/frontend/src/components/Tooltip.scss
@@ -32,6 +32,7 @@
   text-decoration-thickness: 1px;
   text-decoration-color: $base-darkest; /* Lighter grey to match original appearance */
   text-underline-offset: 6px; /* Space between text and underline */
+  font-size: 1rem;
 }
 
 .smart-hub-tooltip {
