fixes per Lauren

--- a/frontend/src/components/Tooltip.scss
+++ b/frontend/src/components/Tooltip.scss
@@ -27,12 +27,12 @@
 
 /* CSS-based dashed underline */
 .smart-hub-tooltip__underlined-text {
-  text-decoration: underline;
-  text-decoration-style: dashed;
-  text-decoration-thickness: 1px;
-  text-decoration-color: $base-darkest; /* Lighter grey to match original appearance */
-  text-underline-offset: 6px; /* Space between text and underline */
-  font-size: 1rem;
+    color: #1b1b1b;
+    text-decoration: underline;
+    text-decoration-color: #1b1b1b;
+    text-decoration-style: dashed;
+    text-decoration-thickness: 1px;
+    text-underline-offset: 6px;
 }
 
 .smart-hub-tooltip {
